--- a/address.html
+++ b/address.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="index.css">
+        <style>
+            p{
+                border: 2px red solid;
+            }
+        </style>
+    </head>
     <body>
         <h1>우리 가족</h1>
         <ul>
@@ -9,6 +14,8 @@
             <li><a href="telephone.html">전화번호</a></li>
             <li><a href="family.html">가족사항</a></li>
         </ul>
-        <p>This is mail page. Please select menu.</p>
+        <p>
+            주소 : 경기도 광주시
+        </p>
     </body>
 </html>
