세부 간단한 내용 변경

--- a/address.html
+++ b/address.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            p{
-                border: 2px red solid;
-            }
-        </style>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>우리 가족</h1>
@@ -15,7 +11,7 @@
             <li><a href="family.html">가족사항</a></li>
         </ul>
         <p>
-            주소 : 경기도 광주시
+            경기도 광주시
         </p>
     </body>
 </html>
